# m365-group-email-tui

./: ARCHITECTURE.md  Cargo.toml  README.md
src/: auth.rs  graph.rs  main.rs  tui.rs
